making a few changes

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -5,4 +5,4 @@ slug: "/about"
 
 Hi!
 
-I'm Alamin, nice to meet you!
+I'm Alamin, nice to meet you! As you can tell, there is not much to see here yet!
